# ENLIGHTEN

./: .flake8  .gitignore  .pylintrc  CHANGELOG.md  CODE_OF_CONDUCT.md  Doxyfile  LICENSE  Makefile  NOTICE.md  README.md  README_ADD_TO_DOCS.md  README_ARCHITECTURE.md  README_BACKLOG.md  README_CHANGELOG.md  README_CSS.md  README_DOCUMENTATION.md  README_HISTORY.md  README_LINUX.md  README_MACOS.md  README_MAINTENANCE.md  README_OCEAN.md  README_PLUGINS.md  README_QT.md  README_RPI.md  README_SPI.md  README_TESTING.md  README_VIRTSPEC.md  README_WIN10.md  README_WIN11.md  README_WINDOWS.md  activate.bat  designer.sh  enlighten.spec  go.bat  main.spec  profile_linux.sh  pyproject.toml  requirements.txt  run-ext.bat  run.bat  (+1 more)
.github/workflows/: python-app.yml
docs/: ARCHITECTURE.md  BUILD_LINUX.md  BUILD_MACOS.md  BUILD_MACOS_ARM.md  BUILD_RPI.md  BUILD_WIN10.md  BUILD_WIN11.md  BUILD_WINDOWS.md  BUILD_WINDOWS_10_LEGACY.md  CONTENTS.md  CSS.md  DOCUMENTATION.md  FAQ.md  HISTORY.md  KIA.md  MAINTENANCE.md  OCEAN.md  ORDER_OF_OPERATIONS.md  PLUGINS.md  QT.md  SPI.md  TESTING.md
enlighten/: AbsorbanceFeature.py  AccessoryControlFeature.py  AdvancedOptionsFeature.py  AreaScanFeature.py  Authentication.py  BLEManager.py  BaselineCorrection.py  BasicDialog.py  BasicWindow.py  BatchCollection.py  BatteryFeature.py  BoxcarFeature.py  BusinessObjects.py  Clipboard.py  CloudManager.py  ColorNames.py  Colors.py  ColumnFileParser.py  Configuration.py  ConfirmWidget.py  Controller.py  Cursor.py  DarkFeature.py  DashFileParser.py  DespikingFeature.py  DetectorTemperatureFeature.py  EEPROMEditor.py  EEPROMWriter.py  EmissionLamps.py  EnlightenFeature.py  ExportFileParser.py  ExternalTriggerFeature.py  FileManager.py  FocusListener.py  GUI.py  GainDBFeature.py  Graph.py  GuideFeature.py  HardwareFileOutputManager.py  HighGainModeFeature.py  (+39 more)
enlighten/KnowItAll/: Config.py  Feature.py  Wrapper.py  __init__.py
enlighten/Plugins/: EnlightenApplicationInfoReal.py  PluginController.py  PluginControllerFeature.py  PluginFieldWidget.py  PluginModuleInfo.py  PluginValidator.py  PluginWorker.py  TableModel.py
enlighten/build_hooks/: build_ui_files.py
enlighten/data/: ColorNames.py  ModelFWHM.py  ModelInfo.py  ModelInfoFeature.py  TableModel.py
enlighten/device/: AccessoryControlFeature.py  AccessoryControlXLFeature.py  AccessoryControlXSFeature.py  AmbientTemperatureFeature.py  Authentication.py  (+19 more)
environments/: conda-linux.yml  conda-win10.yml
pluginExamples/: EnlightenPlugin.py
plugins/: EnlightenPlugin.py  README_FIRST.TXT
scripts/: Application_InnoSetup.iss  Enlighten.py  bootstrap.bat  build_ui_files.py  collapse-export.py  deploy  embed_stylesheet.py  enlighten.bat  enlighten_launcher.SED  enlighten_ubuntu_launcher.sh  interp-spectra.py  merge-spectra.py  process-mode-demo.sh  rebuild_resources.sh  run-burnin.bat  split-spectra.py  themegen.py  transpose.py  ubuntu_launcher.sh
test/: conftest.py  pytest.ini  test_gui.py  test_usb.py
udev/: 10-wasatch.rules
(+622 files in other folders)
